--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
 		"dist"
 	],
 	"dependencies": {
-		"ink": "^4.1.0",
+		"@inkjs/ui": "^2.0.0",
+		"ink": "^6.6.0",
 		"meow": "^11.0.0",
-		"react": "^18.2.0"
+		"mic": "^2.1.2",
+		"react": "^19.2.3"
 	},
 	"devDependencies": {
 		"@sindresorhus/tsconfig": "^3.0.1",
-		"@types/react": "^18.0.32",
+		"@types/react": "^19.2.3",
 		"@vdemedes/prettier-config": "^2.0.1",
 		"ava": "^5.2.0",
 		"chalk": "^5.2.0",
