--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"@inkjs/ui": "^2.0.0",
 		"ink": "^6.6.0",
 		"meow": "^11.0.0",
-		"mic": "^2.1.2",
+		"node-record-lpcm16": "^1.0.1",
 		"react": "^19.2.3"
 	},
 	"devDependencies": {
